# vicare-expat

./: ANNOUNCE  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  configure.sh
doc/: Makefile.am  macros.texi  vicare-expat.texi
lib/: Makefile.am  compile-all.sps  compile-nausicaa.sps  dependencies.make  features.c  libraries.scm
lib/nausicaa/xml/: expat.vicare.sls
lib/vicare/: expat.sls
lib/vicare/expat/: constants.sls.in
lib/vicare/xml/: expat.sls  expat.vicare.sls
lib/vicare/xml/expat/: cond-expand.sls  constants.sls.in  constants.vicare.sls.in  unsafe-capi.sls  unsafe-capi.vicare.sls
meta/autoconf/: vicare.m4
meta/makefiles/: lib.am  tests.am
src/: Makefile.am  vicare-expat-core.c  vicare-expat-internals.h  vicare-expat-version.c  vicare-expat.c  vicare.c
tests/: Makefile.am  demo-for-documentation.sps  demo-for-nau-documentation.sps  demo-for-plain-documentation.sps  proof-basic.sps  proof-for-documentation.sps  proof-for-nau-documentation.sps  test-vicare-expat-core.sps  test-vicare-expat-version.sps  test-vicare-expat.sps  test-vicare-nausicaa.sps
