dnl @configure_input@
dnl

AC_PREREQ([2.68])
AC_INIT([vicare-expat],[0.1d0],[marco.maggi-ipsu@poste.it])
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE
LT_PREREQ([2.2])
LT_INIT
AC_CONFIG_SRCDIR([src/])
dnl AM_MAINTAINER_MODE
AC_CANONICAL_HOST

#page
#### compiler

AM_INIT_AUTOMAKE([-Wall])

AC_PROG_CC
AC_PROG_CC_C_O

AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

#page
#### vicare configuration

AC_CHECK_HEADERS([vicare.h],,
  [AC_MSG_FAILURE([missing vicare.h header],[2])])

AC_CHECK_PROG([VICARE],[vicare],[vicare],[:])

#page
#### expat configuration

AC_CHECK_HEADERS([expat.h],,
  [AC_MSG_FAILURE([missing expat.h header],[2])])
AC_CHECK_LIB([expat],[XML_ParserCreate],,
  [AC_MSG_FAILURE([missing Expat library],[2])])

vicare_expat_VERSION_INTERFACE_CURRENT=0
vicare_expat_VERSION_INTERFACE_REVISION=0
vicare_expat_VERSION_INTERFACE_AGE=0
AC_DEFINE_UNQUOTED([vicare_expat_VERSION_INTERFACE_CURRENT],
  [$vicare_expat_VERSION_INTERFACE_CURRENT],
  [current interface number])
AC_DEFINE_UNQUOTED([vicare_expat_VERSION_INTERFACE_REVISION],
  [$vicare_expat_VERSION_INTERFACE_REVISION],
  [current interface implementation number])
AC_DEFINE_UNQUOTED([vicare_expat_VERSION_INTERFACE_AGE],
  [$vicare_expat_VERSION_INTERFACE_AGE],
  [current interface age number])
AC_DEFINE_UNQUOTED([vicare_expat_VERSION_INTERFACE_STRING],
  ["$vicare_expat_VERSION_INTERFACE_CURRENT.$vicare_expat_VERSION_INTERFACE_REVISION"],
  [library interface version])
AC_SUBST([vicare_expat_VERSION_INTERFACE_CURRENT])
AC_SUBST([vicare_expat_VERSION_INTERFACE_REVISION])
AC_SUBST([vicare_expat_VERSION_INTERFACE_AGE])

#page
#### symbols

AC_DEFUN([VICARE_CONSTANT_TEST],[VICARE_VALUEOF_TEST([$1],[$1])])
AC_DEFUN([VICARE_CONSTANT_TESTS],[m4_map_args_w($1,[VICARE_CONSTANT_TEST(],[)])])

AC_DEFUN([VICARE_STRING_CONSTANT_TEST],[VICARE_STRINGOF_TEST([$1],[$1])])
AC_DEFUN([VICARE_STRING_CONSTANT_TESTS],[m4_map_args_w($1,[VICARE_STRING_CONSTANT_TEST(],[)])])

dnl Preprocessor symbols: XML_Bool
VICARE_CONSTANT_TESTS([XML_TRUE XML_FALSE])

dnl enum XML_Status
VICARE_CONSTANT_TESTS([XML_STATUS_ERROR XML_STATUS_OK XML_STATUS_SUSPENDED

dnl enum XML_Error
VICARE_CONSTANT_TEST([XML_ERROR_NONE])
VICARE_CONSTANT_TEST([XML_ERROR_NO_MEMORY])
VICARE_CONSTANT_TEST([XML_ERROR_SYNTAX])
VICARE_CONSTANT_TEST([XML_ERROR_NO_ELEMENTS])
VICARE_CONSTANT_TEST([XML_ERROR_INVALID_TOKEN])
VICARE_CONSTANT_TEST([XML_ERROR_UNCLOSED_TOKEN])
VICARE_CONSTANT_TEST([XML_ERROR_PARTIAL_CHAR])
VICARE_CONSTANT_TEST([XML_ERROR_TAG_MISMATCH])
VICARE_CONSTANT_TEST([XML_ERROR_DUPLICATE_ATTRIBUTE])
VICARE_CONSTANT_TEST([XML_ERROR_JUNK_AFTER_DOC_ELEMENT])
VICARE_CONSTANT_TEST([XML_ERROR_PARAM_ENTITY_REF])
VICARE_CONSTANT_TEST([XML_ERROR_UNDEFINED_ENTITY])
VICARE_CONSTANT_TEST([XML_ERROR_RECURSIVE_ENTITY_REF])
VICARE_CONSTANT_TEST([XML_ERROR_ASYNC_ENTITY])
VICARE_CONSTANT_TEST([XML_ERROR_BAD_CHAR_REF])
VICARE_CONSTANT_TEST([XML_ERROR_BINARY_ENTITY_REF])
VICARE_CONSTANT_TEST([XML_ERROR_ATTRIBUTE_EXTERNAL_ENTITY_REF])
VICARE_CONSTANT_TEST([XML_ERROR_MISPLACED_XML_PI])
VICARE_CONSTANT_TEST([XML_ERROR_UNKNOWN_ENCODING])
VICARE_CONSTANT_TEST([XML_ERROR_INCORRECT_ENCODING])
VICARE_CONSTANT_TEST([XML_ERROR_UNCLOSED_CDATA_SECTION])
VICARE_CONSTANT_TEST([XML_ERROR_EXTERNAL_ENTITY_HANDLING])
VICARE_CONSTANT_TEST([XML_ERROR_NOT_STANDALONE])
VICARE_CONSTANT_TEST([XML_ERROR_UNEXPECTED_STATE])
VICARE_CONSTANT_TEST([XML_ERROR_ENTITY_DECLARED_IN_PE])
VICARE_CONSTANT_TEST([XML_ERROR_FEATURE_REQUIRES_XML_DTD])
VICARE_CONSTANT_TEST([XML_ERROR_CANT_CHANGE_FEATURE_ONCE_PARSING])
VICARE_CONSTANT_TEST([XML_ERROR_UNBOUND_PREFIX])
VICARE_CONSTANT_TEST([XML_ERROR_UNDECLARING_PREFIX])
VICARE_CONSTANT_TEST([XML_ERROR_INCOMPLETE_PE])
VICARE_CONSTANT_TEST([XML_ERROR_XML_DECL])
VICARE_CONSTANT_TEST([XML_ERROR_TEXT_DECL])
VICARE_CONSTANT_TEST([XML_ERROR_PUBLICID])
VICARE_CONSTANT_TEST([XML_ERROR_SUSPENDED])
VICARE_CONSTANT_TEST([XML_ERROR_NOT_SUSPENDED])
VICARE_CONSTANT_TEST([XML_ERROR_ABORTED])
VICARE_CONSTANT_TEST([XML_ERROR_FINISHED])
VICARE_CONSTANT_TEST([XML_ERROR_SUSPEND_PE])
VICARE_CONSTANT_TEST([XML_ERROR_RESERVED_PREFIX_XML])
VICARE_CONSTANT_TEST([XML_ERROR_RESERVED_PREFIX_XMLNS])
VICARE_CONSTANT_TEST([XML_ERROR_RESERVED_NAMESPACE_URI])

dnl enum XML_Content_Type
VICARE_CONSTANT_TESTS([XML_CTYPE_EMPTY XML_CTYPE_ANY XML_CTYPE_MIXED XML_CTYPE_NAME XML_CTYPE_CHOICE XML_CTYPE_SEQ])

dnl enum XML_Content_Quant
VICARE_CONSTANT_TESTS([XML_CQUANT_NONE XML_CQUANT_OPT XML_CQUANT_REP XML_CQUANT_PLUS

dnl enum XML_Parsing
VICARE_CONSTANT_TESTS([XML_INITIALIZED XML_PARSING XML_FINISHED XML_SUSPENDED

dnl enum XML_ParamEntityParsing
VICARE_CONSTANT_TESTS([XML_PARAM_ENTITY_PARSING_NEVER XML_PARAM_ENTITY_PARSING_UNLESS_STANDALONE XML_PARAM_ENTITY_PARSING_ALWAYS

dnl Preprocessor symbols: version numbers
VICARE_CONSTANT_TESTS([XML_MAJOR_VERSION XML_MINOR_VERSION XML_MICRO_VERSION])

dnl enum XML_FeatureEnum
VICARE_CONSTANT_TEST([XML_FEATURE_END])
VICARE_CONSTANT_TEST([XML_FEATURE_UNICODE])
VICARE_CONSTANT_TEST([XML_FEATURE_UNICODE_WCHAR_T])
VICARE_CONSTANT_TEST([XML_FEATURE_DTD])
VICARE_CONSTANT_TEST([XML_FEATURE_CONTEXT_BYTES])
VICARE_CONSTANT_TEST([XML_FEATURE_MIN_SIZE])
VICARE_CONSTANT_TEST([XML_FEATURE_SIZEOF_XML_CHAR])
VICARE_CONSTANT_TEST([XML_FEATURE_SIZEOF_XML_LCHAR])
VICARE_CONSTANT_TEST([XML_FEATURE_NS])
VICARE_CONSTANT_TEST([XML_FEATURE_LARGE_SIZE])

#page
#### finish

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile tests/Makefile lib/Makefile lib/vicare/expat/constants.sls])
AC_OUTPUT

### end of file
# Local Variables:
# mode: autoconf
# page-delimiter: "^#page"
# End:
